updated NSwag; Tested FileUpload
